# white-star

./: .clang-format  CMakeLists.txt  README.md  format.sh  rebuild.sh
data/shaders/: cube.frag  cube.vert  outline.frag  planet.frag
src/: app.cpp  app.hpp  app_state.cpp  app_state.hpp  filesystem.cpp  filesystem.hpp  main.cpp  render.cpp  render.hpp  utility.hpp
